# bambulab

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-plz.yml  release.yaml
examples/: basic.rs
scripts/: prepare-release.sh
src/: client.rs  command.rs  fan.rs  features.rs  lib.rs  message.rs  parser.rs  speedprofile.rs
