[package]
name = "bambulab"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/markhaehnel/bambulab"
authors = ["Mark Hähnel <hello@markhaehnel.de>"]
description = "API client for Bambu Lab printers"
license = "MIT OR Apache-2.0"
keywords = ["3d-printer", "api", "client", "mqtt", "bambu"]
categories = ["iot", "hardware"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
futures = { version = "0.3.29", default-features = false }
paho-mqtt = { version = "0.12.3" }
rand = { version = "0.8.5" }
tokio = { version = "1.34.0", features = ["full"] }

[profile.release]
lto = true
opt-level = "s"
strip = true

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
multiple_crate_versions = "allow"
