[package]
name = "bambulab"
version = "0.4.3"
edition = "2021"
repository = "https://github.com/markhaehnel/bambulab"
authors = ["Mark Hähnel <hello@markhaehnel.de>"]
description = "API client for Bambu Lab printers"
license = "MIT OR Apache-2.0"
keywords = ["3d-printer", "api", "client", "mqtt", "bambu"]
categories = ["network-programming", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", default-features = false }
nanoid = "0.4.0"
paho-mqtt = { version = "0.12.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
tokio = { version = "1.38.0", features = ["macros", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
lto = true
opt-level = "s"
strip = true

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
